samples/_failures_safe/1761175220_817990_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4dfc7cf2.c: In function ‘main’:
./samples/SAFE/__tmp_4dfc7cf2.c:149:28: error: missing terminating " character
  149 |                     printf("Error
      |                            ^~~~~~
./samples/SAFE/__tmp_4dfc7cf2.c:149:21: error: expected expression at end of input
  149 |                     printf("Error
      |                     ^~~~~~
./samples/SAFE/__tmp_4dfc7cf2.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4dfc7cf2.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4dfc7cf2.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4dfc7cf2.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4dfc7cf2.c:149:21: error: expected declaration or statement at end of input
